[package]
name = "roogle-cloud"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.10.0"
thiserror = "1.0.9"
anyhow = "1.0.26"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
reqwest = { version = "0.10.1", features = ["json"] }
frank_jwt = "3.1.2"
oauth2 = { version = "3.0.0-alpha.7", default-features = false, features = ["futures-03"] }

[dev-dependencies]
tokio = { version = "0.2.9", default-features = false, features = ["rt-threaded", "macros"] }
